--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_HomeLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_HomeLayout.cshtml
@@ -100,9 +100,18 @@
                                                     @Html.Raw(widget.DisplayTitle)
                                                 </div>
                                             }
-                                            <div class='panel-body'>
-                                                @Html.Raw(widget.RenderBody())
-                                            </div>
+                                            @if (widget.DisplayTitle != "" || widget.Footer != "")
+                                            {
+                                                <div class='panel-body'>
+                                                    @Html.Raw(widget.RenderBody())
+                                                </div>
+                                            }
+                                            else
+                                            {
+                                                <div>
+                                                    @Html.Raw(widget.RenderBody())
+                                                </div>
+                                            }
                                             @if (widget.Footer != "")
                                             {
                                                 <div class='panel-footer'>
@@ -162,9 +171,18 @@
                                             @Html.Raw(widget.DisplayTitle)
                                         </div>
                                     }
-                                    <div class='panel-body'>
-                                        @Html.Raw(widget.RenderBody())
-                                    </div>
+                                    @if (widget.DisplayTitle != "" || widget.Footer != "")
+                                    {
+                                        <div class='panel-body'>
+                                            @Html.Raw(widget.RenderBody())
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div>
+                                            @Html.Raw(widget.RenderBody())
+                                        </div>
+                                    }
                                     @if (widget.Footer != "")
                                     {
                                         <div class='panel-footer'>
@@ -319,7 +337,7 @@
             <!-- Main content Start -->
             <div class="col-md-@bodyClassWidth">
                 <!-- Featured Start -->
-                <div class="row Featured">
+                <div class="Featured">
                     @{
                         var featured = GlobalConfig.WebSiteWidgets.Where(x => x.Zone == "Featured" && x.LayoutName == ViewBag.CurrentLayout).ToList();
                         if (featured != null && featured.Count > 0)
@@ -405,9 +423,18 @@
                                                     @Html.Raw(widget.DisplayTitle)
                                                 </div>
                                             }
-                                            <div class='panel-body'>
-                                                @Html.Raw(widget.RenderBody())
-                                            </div>
+                                            @if (widget.DisplayTitle != "" || widget.Footer != "")
+                                            {
+                                                <div class='panel-body'>
+                                                    @Html.Raw(widget.RenderBody())
+                                                </div>
+                                            }
+                                            else
+                                            {
+                                                <div>
+                                                    @Html.Raw(widget.RenderBody())
+                                                </div>
+                                            }
                                             @if (widget.Footer != "")
                                             {
                                                 <div class='panel-footer'>
