--- a/NetCoreCMS.Web/Themes/DefaultDark/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/DefaultDark/Shared/Layouts/_SiteLayout.cshtml
@@ -100,9 +100,18 @@
                                                     @Html.Raw(widget.DisplayTitle)
                                                 </div>
                                             }
-                                            <div class='panel-body'>
-                                                @Html.Raw(widget.RenderBody())
-                                            </div>
+                                            @if (widget.DisplayTitle != "" || widget.Footer != "")
+                                            {
+                                                <div class='panel-body'>
+                                                    @Html.Raw(widget.RenderBody())
+                                                </div>
+                                            }
+                                            else
+                                            {
+                                                <div>
+                                                    @Html.Raw(widget.RenderBody())
+                                                </div>
+                                            }
                                             @if (widget.Footer != "")
                                             {
                                                 <div class='panel-footer'>
@@ -300,9 +309,18 @@
                                                     @Html.Raw(widget.DisplayTitle)
                                                 </div>
                                             }
-                                            <div class='panel-body'>
-                                                @Html.Raw(widget.RenderBody())
-                                            </div>
+                                            @if (widget.DisplayTitle != "" || widget.Footer != "")
+                                            {
+                                                <div class='panel-body'>
+                                                    @Html.Raw(widget.RenderBody())
+                                                </div>
+                                            }
+                                            else
+                                            {
+                                                <div>
+                                                    @Html.Raw(widget.RenderBody())
+                                                </div>
+                                            }
                                             @if (widget.Footer != "")
                                             {
                                                 <div class='panel-footer'>
@@ -388,9 +406,18 @@
                                                     @Html.Raw(widget.DisplayTitle)
                                                 </div>
                                             }
-                                            <div class='panel-body'>
-                                                @Html.Raw(widget.RenderBody())
-                                            </div>
+                                            @if (widget.DisplayTitle != "" || widget.Footer != "")
+                                            {
+                                                <div class='panel-body'>
+                                                    @Html.Raw(widget.RenderBody())
+                                                </div>
+                                            }
+                                            else
+                                            {
+                                                <div>
+                                                    @Html.Raw(widget.RenderBody())
+                                                </div>
+                                            }
                                             @if (widget.Footer != "")
                                             {
                                                 <div class='panel-footer'>
