--- a/NetCoreCMS.Web/Views/Shared/_AdminLoginPartial.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLoginPartial.cshtml
@@ -30,7 +30,7 @@
                             </li>
                             <li><hr /></li>                            
                             <li>
-                                <a asp-area="" asp-controller="Home" asp-action="RestartHost" asp-route-returnUrl="/Admin" , asp-route-returnUrlName="Admin" title="Restart Host"><i class="fa fa-refresh fa-fw"></i> Restart Host</a>
+                                <a asp-area="" asp-controller="Home" asp-action="RestartHost" title="Restart Host"><i class="fa fa-refresh fa-fw"></i> Restart Host</a>
                             </li>
                         </ul>
                         <!-- /.dropdown-user -->
