--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_Footer.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_Footer.cshtml
@@ -55,9 +55,18 @@
                                             @Html.Raw(widget.DisplayTitle)
                                         </div>
                                     }
-                                    <div class='panel-body'>
-                                        @Html.Raw(widget.RenderBody())
-                                    </div>
+                                    @if (widget.DisplayTitle != "" || widget.Footer != "")
+                                    {
+                                        <div class='panel-body'>
+                                            @Html.Raw(widget.RenderBody())
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div>
+                                            @Html.Raw(widget.RenderBody())
+                                        </div>
+                                    }
                                     @if (widget.Footer != "")
                                     {
                                         <div class='panel-footer'>
