--- a/NetCoreCMS.Web/Modules/NetCoreCMS.MatGallery/Views/MatgModule/Manage.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.MatGallery/Views/MatgModule/Manage.cshtml
@@ -14,13 +14,23 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 @ViewData["PageSubtitle"]
-                <div class="pull-right"><a asp-controller="MatGallery" asp-action="CreateEdit" class="btn btn-outline btn-primary btn-xs">Add New</a></div>
+                <div class="pull-right"><a asp-controller="MatGallery" asp-action="Upload" class="btn btn-outline btn-success btn-xs">Upload</a></div>
             </div>
             <div class="panel-body">
                 <table id="pageListDt" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
                         <tr>
+                            <th>ModuleId</th>
                             <th>Name</th>
+                            <th>Title</th>
+                            <th>Version</th>
+                            <th>NetCoreCms Version</th>
+                            <th>Category</th>
+                            <th>Creation Date</th>
+                            <th>Last Update</th>
+                            <th>Total Update</th>
+                            <th>Author</th>
+                            <th>CreatedBy</th>
                             <th>Status</th>
                             <th>Action</th>
                         </tr>
@@ -29,12 +39,21 @@
                         @foreach (var item in Model)
                         {
                             <tr>
-                                <td>@item.Name</td>
+                                <td>@item.ModuleId</td>
+                                <td>@item.ModuleName</td>
+                                <td>@item.ModuleTitle</td>
+                                <td>@item.Version</td>
+                                <td>@item.NetCoreCMSVersion</td>
+                                <td>@item.Category</td>
+                                <td>@item.CreationDate</td>
+                                <td>@item.ModificationDate</td>
+                                <td>@item.VersionNumber</td>
+                                <td>@item.Author</td>
                                 <td>@item.CreateBy</td>
                                 <td>@item.Status</td>
                                 <td>
                                     <a asp-controller="MatGallery" asp-action="CreateEdit" asp-route-id="@item.Id">Edit</a> |
-                                    <a asp-controller="MatGallery" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                    <a asp-controller="MatGallery" asp-action="Log" asp-route-id="@item.Id">Log</a>
                                 </td>
                             </tr>
                         }
