--- a/NetCoreCMS.Web/Modules/NetCoreCMS.MatGallery/Views/MatgModule/Manage.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.MatGallery/Views/MatgModule/Manage.cshtml
@@ -14,25 +14,25 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 @ViewData["PageSubtitle"]
-                <div class="pull-right"><a asp-controller="MatGallery" asp-action="Upload" class="btn btn-outline btn-success btn-xs">Upload</a></div>
+                <div class="pull-right"><a asp-controller="MatgModule" asp-action="Upload" class="btn btn-outline btn-success btn-xs">Upload</a></div>
             </div>
             <div class="panel-body">
                 <table id="pageListDt" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
                         <tr>
-                            <th>ModuleId</th>
-                            <th>Name</th>
-                            <th>Title</th>
-                            <th>Version</th>
-                            <th>NetCoreCms Version</th>
-                            <th>Category</th>
-                            <th>Creation Date</th>
-                            <th>Last Update</th>
-                            <th>Total Update</th>
-                            <th>Author</th>
-                            <th>CreatedBy</th>
-                            <th>Status</th>
-                            <th>Action</th>
+                            <th class="text-center">ModuleId</th>
+                            <th class="text-center">Name</th>
+                            <th class="text-center">Title</th>
+                            <th class="text-center">Version</th>
+                            <th class="text-center">Ncc Version</th>
+                            <th class="text-center">Category</th>
+                            <th class="text-center">Creation Date</th>
+                            <th class="text-center">Last Update</th>
+                            <th class="text-center">Total Update</th>
+                            <th class="text-center">Author</th>
+                            <th class="text-center">CreatedBy</th>
+                            <th class="text-center">Status</th>
+                            <th class="text-center">Action</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -52,8 +52,14 @@
                                 <td>@item.CreateBy</td>
                                 <td>@item.Status</td>
                                 <td>
-                                    <a asp-controller="MatGallery" asp-action="CreateEdit" asp-route-id="@item.Id">Edit</a> |
-                                    <a asp-controller="MatGallery" asp-action="Log" asp-route-id="@item.Id">Log</a>
+                                    @if (item.Status == -2) {
+                                        <a asp-controller="MatgModule" asp-action="StatusUpdate" asp-route-id="@item.Id">Active</a>
+                                    }
+                                    else
+                                    {
+                                        <a asp-controller="MatgModule" asp-action="StatusUpdate" asp-route-id="@item.Id">Inactive</a>
+                                    }
+                                    | <a asp-controller="MatgModule" asp-action="Log" asp-route-id="@item.Id">Log</a>
                                 </td>
                             </tr>
                         }
